[package]
name = "edge_smashline"
version = "0.1.0"
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs.git " }


[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1

[feature]
dev = []
devhook = []